# hse_mlops_hw

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit-test.yml
