[tool.poetry]
name = "hse-mlops-hw"
version = "0.1.0"
description = "MLOps homework project"
authors = ["Vlad Busov <busov.dev@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
