[tool.poetry]
name = "hse-mlops-hw"
version = "0.1.0"
description = "MLOps homework project"
authors = ["Vlad Busov <busov.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = []
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = E203, E501, W503, B950
max-complexity = 12
select = B, C, E, F, W, B9
per-file-ignores =
    # for easier imports to __init__ without __all__
    **/__init__.py: F401
    # file to define custom types
    types.py: F401

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
